# monogodbconnector

./: mypy.ini  pyproject.toml  requirements_dev.txt  setup.config  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml
experiments/: Untitled.ipynb
src/Mongodb_Connect.egg-info/: PKG-INFO  SOURCES.txt
src/mongodbautomationaibi/: __init__.py
src/mongodbconnector.egg-info/: PKG-INFO  SOURCES.txt
