[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mongodbconnector"
version = "0.0.4"
description = "Your project description"
authors = [{name = "aibi10", email = "isingh.abhishek10@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # List your project dependencies here
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]