[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mongodbconnector"
version = "0.0.4"
description = "Your project description"
authors = [{name = "aibi10", email = "isingh.abhishek10@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pymongo[srv]",
    "dnspython",
    "pandas",
    "numpy",
    "ensure",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "flake8",
    "pytest",
    "pandas-stubs",
    "types-pymongo",
    "tox",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311
isolated_build = True

[testenv]
deps = 
    -r requirements_dev.txt
commands =
    python --version
    pip list
    flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
    flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
    mypy src/ --ignore-missing-imports
    pytest -v tests/unit
    pytest -v tests/integration
"""